# Qosmos

./: .gitattributes  CMakeLists.txt  README.md  deploy.sh
dependencies/glad/: glad.h
src/: axes.h  camera.h  config.cpp  config.h  glad.c  main.cpp  material.cpp  material.h  point_cloud.h  quantum.h  sampler.h  triangle_mesh.cpp
src/shaders/: fragment.glsl  fragment.txt  fragment_axes.glsl  vertex.glsl  vertex.txt  vertex_axes.glsl
